--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,8 +26,7 @@
   );
 }
 
-.gradient,
-.active {
+.gradient{
   background: linear-gradient(
     92.23deg,
     #406aff 21.43%,
@@ -39,8 +38,10 @@
 
 .active {
   color: #fff;
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 100%;
+  font-weight: 900;
+  background-color: rgb(0 0 0 / 0.15);
 }
 
 @layer base {
