--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.bgedu{
+  background-color: rgb(0 0 0 / 0.25);
+}
 
 .btn {
   box-shadow: 0px 4.42184px 107.23px rgba(255, 86, 246, 0.51);
